# OptimizedSM4

./: .gitignore  README.md
AESNI-SM4/: CMakeLists.txt
AESNI-SM4/include/: sm4_ref.h  sm4ni.h
AESNI-SM4/src/: sm4_ref.c  sm4ni.c
AESNI-SM4/test/: test_main.c
BS-SM4/: CMakeLists.txt
BS-SM4/include/: mode_gcm.h  sm4_bs256.h  sm4_bs512.h  test.h  utils.h
BS-SM4/src/: mode_gcm.c  sm4_bs256.c  sm4_bs512.c  utils.c
BS-SM4/test/: main.c  test.c
LUT-SM4/: CMakeLists.txt
LUT-SM4/include/: lut_sm4.h
LUT-SM4/src/: lut_sm4.c
LUT-SM4/test/: main.c
